[project]
name = "rag-api"
version = "1.0.0"
description = "RAG API - FastAPI service for document processing, embedding, graph operations, and retrieval"
authors = [
    {name = "Pedro Fernandes"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "pydantic>=2.9.2",
    "httpx>=0.27.0",
    "langchain>=0.3.5",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.5",
    "langchain-text-splitters>=0.3.0",
    "qdrant-client>=1.12.0",
    "neo4j>=5.25.0",
    "boto3>=1.35.32",
    "redis>=5.0.0",
    "gliner>=0.2.0",
    "torch>=2.0.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
mlx = [
    "mlx==0.30.0",
    "mlx-lm==0.28.3",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["debug_extraction*", "tests*", "venv*"]

